add basic function for updating profile
